Removal of colons

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <tbody>
         <tr>
           <td>2017 - 2021</td>
-          <td>: Bachelor of Applied Computer Science at Chuka University</td>
+          <td>Bachelor of Applied Computer Science at Chuka University</td>
         </tr>
       </tbody>
     </table>
@@ -77,7 +77,7 @@
         <tr>
           <td>Sept 2021</td>
           <td>
-            : Participated in Hackathon at Chuka University involving module
+            Participated in Hackathon at Chuka University involving module
             development of the Kenya EMR (Electronic Medical Record) systems for
             Tharaka Nithii county using Java environment.
           </td>
@@ -85,20 +85,20 @@
         <tr>
           <td>May - Jul 2021</td>
           <td>
-            : Industrial Attachment at Kenya Power South Nyanza IT Department.
+            Industrial Attachment at Kenya Power South Nyanza IT Department.
           </td>
         </tr>
         <tr>
           <td>Jan - Mar 2017</td>
           <td>
-            : ACCA (Advanced Certificate in Computer Applications) at St. Ann’s
+            ACCA (Advanced Certificate in Computer Applications) at St. Ann’s
             College.
           </td>
         </tr>
         <tr>
           <td>Feb & Jul 2017</td>
           <td>
-            : Participated in a Connectedness & Leadership Course with IoT/
+            Participated in a Connectedness & Leadership Course with IoT/
             Automation at TOP Global (Technology of Peace/ Tapping Our
             Potential/ Transforming Our Problems) in RODI Kenya.
           </td>
