Added new altered with files

--- a/index.html
+++ b/index.html
@@ -15,28 +15,65 @@
       <tr>
         <td>
           <img
-            src="C:\Users\ONDIGI\Documents\Web Development\HTML - Personal site\Images\Profile.png"
+            src="Images\Profile.png"
             alt="Chris profile picture"
           />
         </td>
         <td>
           <h1>Christopher Ondigi</h1>
-          <p>
-            <em
-              ><strong
-                ><a href="https://en.wikipedia.org/wiki/Chuka_University"
-                  >Chuka University</a
-                ></strong
-              >
-              Graduate</em
-            >
-          </p>
-          <p>I 💗 coding.</p>
+          <table cellspacing="10">
+            <tbody>
+              <tr>
+                <td>Phone ☎:</td>
+                <td>0715 140183</td>
+              </tr>
+              <tr>
+                <td>Email ⌨:</td>
+                <td>ondigi33.christopher@gmail.com</td>
+              </tr>
+            </tbody>
+          </table>
+          <p>Apply for: <strong>Information Technology Support</strong></p>
         </td>
       </tr>
     </table>
     <hr />
 
+    <!--Personal Data-->
+    <h3>Personal Data</h3>
+
+    <table cellspacing="10">
+      <tbody>
+        <tr>
+          <td>Nationality</td>
+          <td>:</td>
+          <td><strong>Kenyan</strong></td>
+        </tr>
+        <tr>
+          <td>Sex</td>
+          <td>:</td>
+          <td><strong>Male</strong></td>
+        </tr>
+        <tr>
+          <td>Marital Status</td>
+          <td>:</td>
+          <td><strong>Single</strong></td>
+        </tr>
+        <tr>
+          <td>Date of Birth</td>
+          <td>:</td>
+          <td>
+            <strong>26<sup>th</sup> July 1998</strong>
+          </td>
+        </tr>
+        <tr>
+          <td>Place of Birth</td>
+          <td>:</td>
+          <td><strong>Kisumu</strong></td>
+        </tr>
+      </tbody>
+    </table>
+    <hr />
     <!-- Books and Teachings segment
     <h3>Books and Teachings</h3>
     <ul>
@@ -51,13 +88,65 @@
       <thead>
         <tr>
           <th>Dates</th>
+          <th>&nbsp;</th>
           <th>Institutions</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td>2017 - 2021</td>
-          <td>Bachelor of Applied Computer Science at Chuka University</td>
+          <td><strong>2017 - 2021</strong></td>
+          <td>:</td>
+          <td>
+            <strong>
+              Bachelor of Applied Computer Science at
+              <em
+                ><a href="https://en.wikipedia.org/wiki/Chuka_University"
+                  >Chuka University</a
+                ></em
+              ></strong
+            >
+          </td>
+        </tr>
+        <tr>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>
+            <li>2nd Class Degree (Upper Division)</li>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <strong>2013 - 2016</strong>
+            <td>:</td>
+          </td>
+          <td>
+            <strong>Chomo Secondary School</strong>
+          </td>
+        </tr>
+        <tr>
+          <td>&nbsp;</td>
+          <td>&nbsp;</td>
+          <td>
+            <li>Grade acheived: B -</li>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <strong>2008 - 2012</strong>
+          </td>
+          <td>:</td>
+          <td>
+            <strong>Genesis Preparatory School</strong>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <strong>2005 - 2007</strong>
+          </td>
+          <td>:</td>
+          <td>
+            <strong>Arya Primary School</strong>
+          </td>
         </tr>
       </tbody>
     </table>
@@ -69,38 +158,52 @@
       <thead>
         <tr>
           <th>Dates</th>
+          <th>&nbsp;</th>
           <th>Trainings</th>
         </tr>
       </thead>
 
       <tbody>
         <tr>
-          <td>Sept 2021</td>
+          <td><strong>Sept 2021</strong></td>
+          <td>:</td>
           <td>
-            Participated in Hackathon at Chuka University involving module
-            development of the Kenya EMR (Electronic Medical Record) systems for
-            Tharaka Nithii county using Java environment.
+            <strong>
+              Participated in Hackathon at Chuka University involving module
+              development of the Kenya EMR (Electronic Medical Record) systems
+              for Tharaka Nithii county using Java environment.</strong
+            >
           </td>
         </tr>
         <tr>
-          <td>May - Jul 2021</td>
+          <td><strong>May - Jul 2021</strong></td>
+          <td>:</td>
           <td>
-            Industrial Attachment at Kenya Power South Nyanza IT Department.
+            <strong
+              >Industrial Attachment at Kenya Power South Nyanza IT
+              Department.</strong
+            >
           </td>
         </tr>
         <tr>
-          <td>Jan - Mar 2017</td>
+          <td><strong>Jan - Mar 2017</strong></td>
+          <td>:</td>
           <td>
-            ACCA (Advanced Certificate in Computer Applications) at St. Ann’s
-            College.
+            <strong
+              >ACCA (Advanced Certificate in Computer Applications) at St. Ann’s
+              College.</strong
+            >
           </td>
         </tr>
         <tr>
-          <td>Feb & Jul 2017</td>
+          <td><strong>Feb & Jul 2017</strong></td>
+          <td>:</td>
           <td>
-            Participated in a Connectedness & Leadership Course with IoT/
-            Automation at TOP Global (Technology of Peace/ Tapping Our
-            Potential/ Transforming Our Problems) in RODI Kenya.
+            <strong
+              >Participated in a Connectedness & Leadership Course with IoT/
+              Automation at TOP Global (Technology of Peace/ Tapping Our
+              Potential/ Transforming Our Problems) in RODI Kenya.</strong
+            >
           </td>
         </tr>
       </tbody>
@@ -109,12 +212,13 @@
     <hr />
 
     <!-- Hobbies segment-->
-    <h3>My Hobbies</h3>
-    <ol type="i">
-      <li>Football</li>
-      <li>Adventures and tourism</li>
-    </ol>
-
+    <h3>My Hobbies and interests</h3>
+    <p>
+      <strong
+        >I enjoy 💗 building java softwares, exploring and learning new things,
+        solving puzzles and socializing with friends and family.</strong
+      >
+    </p>
     <hr />
 
     <!-- Skills-->
@@ -122,16 +226,16 @@
     <table cellspacing="10">
       <tbody>
         <tr>
-          <td>Java Development</td>
+          <td><strong>Java Development</strong></td>
           <td>★★★☆☆</td>
-          <td>Gospel Music Producer</td>
+          <td><strong>Gospel Music Producer</strong></td>
           <td>★★★★☆</td>
         </tr>
         <tr>
-          <td>Web Development</td>
+          <td><strong>Web Development</strong></td>
           <td>★★☆☆☆</td>
-          <td>Excel Accounting Programming</td>
-          <td>★★★☆☆</td>
+          <td><strong>Excel Accounting Programming</strong></td>
+          <td>★★☆☆☆</td>
         </tr>
       </tbody>
     </table>
@@ -246,7 +350,39 @@
 -->
     <hr />
 
-    <!-- Contact segment segment-->
-    <h3><a href="contact.html">Contact us</a></h3>
+    <!--Reference-->
+    <h3>Reference</h3>
+    <table cellspacing="10">
+      <tbody>
+        <tr>
+          <td><strong>1.</strong></td>
+          <td><strong>Dr. David Mwathi</strong></td>
+        </tr>
+        <tr>
+            <td>&nbsp;</td>
+            <td>Computer Science H.O.D and Chair of Kenya EMR developers team, Chuka University.</td>
+        </tr>
+        <tr>
+            <td>&nbsp;</td>
+            <td><em>0722 395 597</em></td>
+        </tr>
+        <tr>
+            <td><strong>2.</strong></td>
+            <td><strong>Engineer Benard Oloo</strong></td>
+          </tr>
+          <tr>
+              <td>&nbsp;</td>
+              <td>Head of KPLC IT (Information Technology) Department South Nyanza region.</td>
+          </tr>
+          <tr>
+              <td>&nbsp;</td>
+              <td><em>0720 888 590</em></td>
+          </tr>
+      </tbody>
+    </table>
+    <!-- Contact segment
+    <h3><a href="contact.html">Contact us</a></h3>-->
   </body>
 </html>
+
+       
