--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <td>&nbsp;</td>
           <td>&nbsp;</td>
           <td>
-            <li>Grade acheived: B -</li>
+            <li>Grade acheived: <Strong>B</Strong> Plain</li>
           </td>
         </tr>
         <tr>
