--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <td>&nbsp;</td>
           <td>&nbsp;</td>
           <td>
-            <li>Grade acheived: <Strong>B</Strong> Plain</li>
+            <li>Grade achieved: <Strong>B</Strong> Plain</li>
           </td>
         </tr>
         <tr>
@@ -214,10 +214,8 @@
     <!-- Hobbies segment-->
     <h3>My Hobbies and interests</h3>
     <p>
-      <strong
-        >I enjoy 💗 building java softwares, exploring and learning new things,
-        solving puzzles and socializing with friends and family.</strong
-      >
+      I enjoy 💗 building java softwares, exploring and learning new things,
+      solving puzzles and socializing with friends and family.
     </p>
     <hr />
 
